# tsm79

./: .env.enterprise.example  .env.example  .gitignore  .pre-commit-config.yaml  30_PERCENT_MILESTONE_EXCEEDED.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.dashboard  Dockerfile.dataplane  Dockerfile.detector  Dockerfile.ebpf-loader  Dockerfile.edge  Dockerfile.proxy  LICENSE  MAINTAINERS.md  MAKE_PUBLIC.md  QUALITY_IMPROVEMENT_COMPLETE.md  README.md  README_OLD_BACKUP.md  REFERENCE_CODE_QUALITY_ANALYSIS.md  ROADMAP.md  SECURITY.md  demo.py  docker-compose.enterprise.yml  docker-compose.yml  generate_code.sh  install.sh  model_setup.py  payload.json  proxy_server.py  pyproject.toml  requirements.txt  rust-toolchain.toml  start-all.sh  test_integration.py  wrangler.jsonc
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
admin-api/: Dockerfile  mvnw  pom.xml
archive/docs/: DEBUG_STATUS_REPORT.md  DEPLOYMENT_SUCCESS.md  GITHUB_PUBLIC_CHECKLIST.md  GITHUB_SETUP.md  README_BACKUP.md  README_OLD.md  RESTRUCTURE_PLAN.md  SUPERIOR_PATTERNS_ANALYSIS.md
archive/legacy/: cli.py  cli_app.py  root_init.py  start.py  tsm.py
assets/: README.md
benchmark/: README.md  RESULTS.md  bench.py  run.sh
caching/: __init__.py
control-plane/: Dockerfile  go.mod  go.sum  main.go
control-plane/api/: handler.go  handler_test.go
control-plane/cluster/: registry.go
control-plane/db/: db.go
control-plane/policy/: signer.go  store.go
control-plane/queue/: queue.go
control-plane/suggestion/: suggestion.go
dashboard/: next.config.js  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: AuditTab.tsx  ClusterTab.tsx  ConnectionStatus.tsx  MetricsCard.tsx  PolicyTab.tsx  RecentRequestsTable.tsx  RiskGauge.tsx  Sparkline.tsx  ThreatIntelTab.tsx
database/: __init__.py
dataplane/: BUILD.md  Cargo.toml  build.rs
dataplane/src/: config.rs  main.rs  pipeline.rs  telemetry.rs  tproxy.rs
dataplane/src/ai/: anthropic.rs  mod.rs  openai.rs  sse.rs
dataplane/src/audit/: chain.rs  merkle.rs  mod.rs  postgres.rs
dataplane/src/detect/: bpe.rs  cvss.rs  entropy.rs  mod.rs  onnx_engine.rs  patterns.rs  pipeline.rs  redact.rs  reputation.rs  structural.rs
dataplane/src/edge/: client.rs  config.rs  integration.rs  mod.rs  verdict.rs
dataplane/src/http/: h1.rs  h2.rs  hpack.rs  mod.rs
dataplane/src/io/: executor.rs  mod.rs  poller.rs  uring.rs
dataplane/src/metrics/: counters.rs  histogram.rs  mod.rs  prometheus.rs
dataplane/src/overlay/: gateway.rs  mod.rs  name.rs  resolver.rs
dataplane/src/policy/: builtin.rs  engine.rs  hotreload.rs  mod.rs  rule.rs
dataplane/src/pool/: circuit.rs  connection.rs  health.rs  mod.rs
dataplane/src/route/: balancer.rs  mod.rs  registry.rs  session.rs
dataplane/src/store/: memory.rs  mod.rs  redis.rs
dataplane/src/tls/: ca.rs  handshake.rs  hkdf.rs  ja3.rs  keys.rs  mod.rs  record.rs
deploy/nginx/: nginx.conf
deploy/postgres/: init.sql
deploy/scripts/: enforce-network.sh  gen-dev-certs.sh  gen-mtls-certs.sh  install.sh  secrets-bootstrap.sh  smoke-test.sh
deploy/systemd/: tsm-admin.service  tsm-control-plane.service  tsm-dataplane.service  tsm-detector.service  tsm-loader.service  tsm-threat-intel.service  tsm.target
detector/: __init__.py  alerting.py  anomaly.py  behavioral.py  classifier.py  correlation.py  grpc_server.py  main.py  normalize.py  output_inspector.py  policy_bundle.py  policy_engine.py  policy_loader.py  presidio_layer.py  reputation.py  requirements.txt  risk_scorer.py  sanitizer.py  semantic.py  speculative_security.py  telemetry.py  tokenizer.py  workspace.py
docs/: DEPLOY.md  LAUNCH_PLAN.md  OBSERVABILITY.md  OVERLAY.md  POLICY.md  QUICKSTART.md  RECON_2026-06.md  RUST_TOOLCHAIN.md  SDK.md  THREAT_MODEL.md
ebpf/: Makefile  setup-tproxy.sh
ebpf-loader/: Cargo.toml
ebpf-loader-c/: Makefile  ai_cidrs.txt  tsm_loader  tsm_loader.c  tsm_multi_loader.c
ebpf-loader/src/: bpf.rs  main.rs  maps.rs  socket.rs
edge/: CMakeLists.txt
edge/src/: edge_host.cpp
edge/worker/: Cargo.toml
edge/worker/src/: lib.rs
examples/: curl_demo.sh  python_openai.py
extension/: README.md  background.js  manifest.json  options.html  options.js  popup.html  popup.js
graphql_api/: __init__.py
landing/: cap-fly.mjs  cap-sections.mjs  cap.mjs  gpu-check.mjs  index.html  package-lock.json  package.json  vite.config.ts
landing-v4/: Dockerfile  colors_and_type.css  engine_v4.js  index.html  landing_v4.css
landing-v5/: README.md  colors_and_type.css  engine_v4.js  index.html  landing_v4.css  landing_v4.js
metrics_export/: __init__.py
monitoring/: __init__.py
overlay-node/: Dockerfile  go.mod  go.sum  main.go  test_publish.py
policy/: __init__.py
policy-lsp/: Dockerfile  Lsp.cs  PolicyLsp.csproj  Program.cs
proto/: detect.proto  edge.proto
proxy/: package-lock.json  package.json
proxy-go/: go.mod  main.go
rag/: __init__.py
ratelimit/: __init__.py
resilience/: __init__.py
sdk/: __init__.py  async_client.py  client.py  protect.py
simulation/: __init__.py
skills/: claude.md  codex.md  general.md  secure-coding.md
streaming/: __init__.py
task_queue/: __init__.py
tests/: test_anomaly.py  test_behavioral.py  test_classifier.py  test_correlation.py  test_detector_service.py  test_e2e.py  test_ed25519.py  test_engine_adapters.py  test_fabric.py  test_fabric_facade.py  test_fabric_integration.py  test_gateway.py  test_normalize.py  test_persistence.py  test_policy_bundle.py  test_policy_engine.py  test_presidio_layer.py  test_proxy_fabric.py  test_proxy_integration.py  test_recovery.py  test_reputation.py  test_routing.py  test_semantic.py  test_telemetry.py  test_tokenizer.py  test_trust_engine.py
threat-intel/: Dockerfile  go.mod  go.sum
tracing/: __init__.py
tsm/: __init__.py
tsm-ctl/: Cargo.toml
tsm-ctl/src/: main.rs
webhooks/: __init__.py
(+224 files in other folders)
