[project]
name = "tsm-firewall"
version = "2.0.0"
description = "The AI Firewall — intercept every AI call, detect PII, redact it, route intelligently"
authors = [{name = "TSM Team", email = "team@tsm.dev"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["ai", "firewall", "pii", "security", "openai", "proxy", "llm", "data-privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []  # CLI + Python proxy: zero runtime deps — pure stdlib

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
]
detector = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
]
all = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
]

[project.urls]
Homepage   = "https://github.com/tsm7979/tsm79"
Repository = "https://github.com/tsm7979/tsm79"
Issues     = "https://github.com/tsm7979/tsm79/issues"

[project.scripts]
tsm = "tsm.cli.main:main"

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where   = ["."]
include = ["tsm*", "detector*"]

[tool.setuptools.package-data]
"tsm"      = ["py.typed"]
"detector" = ["py.typed"]

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
