[package]
name = "tsm-dataplane"
version = "2.0.0"
edition = "2021"
description = "TSMv2 sovereign AI infrastructure data plane"

[[bin]]
name = "tsm-dataplane"
path = "src/main.rs"

[features]
default = []
# Enable typed gRPC transport to Python ML detector (replaces raw HTTP).
# Requires protoc + tonic-build.  Build with: cargo build --features grpc
grpc = ["dep:tonic", "dep:prost", "dep:tokio", "dep:tonic-build"]
# Optional: link the native ONNX Runtime (libonnxruntime) for in-Rust ML triage.
# Off by default — the heuristic path + the Python gRPC detector cover ML triage.
# Enabling it requires adding `ort` + `ndarray` deps; declared here so that
# cfg(feature = "ort-linked") is a known cfg (silences the unexpected_cfgs lint).
ort-linked = []

[dependencies]
# Raw syscall access for io_uring, epoll, BPF map interaction
libc = "0.2"

# AES-NI/ChaCha20 assembly routines + X25519 ECDH
ring = "0.17"

# JSON parsing/serialization for AI protocol bodies and detector responses
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SIMD DFA regex engine with lookahead support
regex = "1"

# Aho-Corasick multi-pattern literal scanner.
# Used as a fast pre-filter before the full regex pass: if none of the known
# secret prefixes (sk-, sk-ant-, ghp_, AKIA, glpat-, hf_, SG., sk_live_,
# -----BEGIN, etc.) appear in the input, the full regex scan is skipped.
# The aho_corasick::AhoCorasick::new() automaton is SIMD-accelerated on x86-64
# via the "teddy" algorithm (requires SSE2; enabled by default on x86-64).
aho-corasick = "1"

# Pure-Rust X.509 certificate generation for the local Root CA / TLS MITM.
# Uses ring for the underlying crypto (Ed25519 / ECDSA P-256 signing).
# Required by dataplane/src/tls/ca.rs.
# x509-parser feature gates CertificateParams::from_ca_cert_pem (load existing CA from disk).
rcgen = { version = "0.13", features = ["x509-parser"] }

# HMAC-SHA256 for the audit chain — constant-time safe
hmac = "0.12"
sha2 = "0.10"

# gRPC client for the Python ML detector (feature-gated)
# When enabled: typed calls replace raw HTTP; supports streaming detect results
tonic  = { version = "0.11", optional = true }
prost  = { version = "0.12", optional = true }
tokio  = { version = "1",    optional = true, features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3"  # temp dirs for ca.rs unit tests

[build-dependencies]
# Only needed when `grpc` feature is enabled
tonic-build = { version = "0.14", optional = true }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true

[profile.dev]
opt-level = 1   # faster compile, still debuggable
